--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
   "name": "reload/os2display-slide-tools",
-  "description": "TODO",
-  "type": "symfony-bundle",
-  "autoload": {
-    "psr-4": {
-      "Reload\\Os2DisplaySlideTools\\": ""
+    "description": "Reusable tools for working with slides in https://github.com/os2display",
+    "type": "library",
+    "minimum-stability": "dev",
+    "require": {},
+    "autoload": {
+      "psr-4": {
+        "Reload\\Os2DisplaySlideTools\\": ""
+      }
     }
-  }
 }
