--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,7 @@
 services:
+  _defaults:
+    autowire: true
   reload.ddbos2display:
     class: Reload\Os2DisplaySlideTools\Service\SlidesInSlideDataCron
-    arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: ik.cron, method: onCron }
