Skip slides that have no data better

--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
   "devDependencies": {
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-uglify": "^3.0.1"
+    "gulp-uglify-es": "^2.0.0"
+  },
+  "scripts": {
+    "build": "gulp"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
